tests/baselines/reference/typeArgumentInferenceWithClassExpression2.errors.txt
tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts(6,5): error TS2345: Argument of type 'typeof (Anonymous class)' is not assignable to parameter of type 'typeof (Anonymous class)'.
<<<<<<< b059135c51ee93f8fb44dd70a2ca67674ff7a877
  Property 'prop' is missing in type '(Anonymous class)' but required in type 'foo<{}>.(Anonymous class)'.
=======
  Type '(Anonymous class)' is not assignable to type 'foo<{}>.(Anonymous class)'.
    Property 'prop' is missing in type '(Anonymous class)'.
tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts(6,38): error TS2339: Property 'length' does not exist on type '{}'.
>>>>>>> Always call getCandidateForOverloadFailure


==== tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts (2 errors) ====
    function foo<T>(x = class { prop: T }): T {
        return undefined;
    }
    
    // Should not infer string because it is a static property
    foo(class { static prop = "hello" }).length;
        ~~~~~
!!! error TS2345: Argument of type 'typeof (Anonymous class)' is not assignable to parameter of type 'typeof (Anonymous class)'.
<<<<<<< b059135c51ee93f8fb44dd70a2ca67674ff7a877
!!! error TS2345:   Property 'prop' is missing in type '(Anonymous class)' but required in type 'foo<{}>.(Anonymous class)'.
!!! related TS2728 tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression2.ts:1:29: 'prop' is declared here.
=======
!!! error TS2345:   Type '(Anonymous class)' is not assignable to type 'foo<{}>.(Anonymous class)'.
!!! error TS2345:     Property 'prop' is missing in type '(Anonymous class)'.
                                         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
>>>>>>> Always call getCandidateForOverloadFailure
